<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2023 RUB-SE-LAB
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="HardcodedText" >

    <!-- TextView at the top -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/instructionField"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/digitSpanMemorizeInstruction"
        android:textStyle="bold"
        android:textSize="20sp" />

    <!-- TextView displaying "1" -->
    <TextView
        android:id="@+id/numberField"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text=""
        android:textStyle="bold"
        android:textSize="24sp" />

    <!-- Buttons arranged in a 3x3 grid -->

    <!-- Button with "Start" text underneath -->
    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_margin="10dp"
        app:columnCount="3"
        app:orientation="horizontal"
        app:rowCount="4">

        <!-- Button for number 0 -->
        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="9"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="2" />

        <!-- Buttons for numbers 1-8 -->
        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="1"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnWeight="1" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="2"
            app:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:text="3"
            app:layout_columnWeight="1"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:text="4"
            app:layout_columnWeight="1"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:text="5"
            app:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:text="6"
            app:layout_columnWeight="1"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:text="7"
            app:layout_columnWeight="1"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:text="8"
            app:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_row="2" />

        <!-- Button for number 9 -->
        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:text="0"
            app:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_row="3" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digitSpanStartBtn"
        android:id="@+id/start"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"

        android:padding="16dp"/>

</LinearLayout>
