...
    <string name="moreRunsSharedMessage">I completed more than %NUM% runs this month! Moodivation helped me to stay motivated and track my progress.</string>
    <string name="runsSharedMessage">I completed %NUM% runs this month! Moodivation helped me to stay motivated and track my progress.</string>
    <string name="moreBikeRidesSharedMessage">I completed more than %NUM% bike rides this month! Moodivation helped me stay motivated and track my progress.</string>
    <string name="bikeRidesSharedMessage">I completed %NUM% bike rides this month! Moodivation helped me stay motivated and track my progress.</string>

    <string name="digitSpanCongrats">Congratulations! Click start to proceed.</string>
    <string name="digitSpanFinalRes">Wrong number! Your maximum is %NUM%.</string>
    <string name="digitSpanEnterNumbersInstruction">Enter the numbers</string>
    <string name="digitSpanMemorizeInstruction">Try to memorize the numbers!</string>
    <string name="digitSpanStartBtn">Start</string>

    <string name="questionnaireSaveBtn">Save</string>
    <string name="questionnaireAddNoteBtn">Add Note</string>
...
