...
        android:layout_marginBottom="8dp"
        android:singleLine="false"
        android:text="TextView"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/questionnaireNotesTextBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

...
